--- a/src/MailXmlProcessor.Api/MailXmlProcessor.Api.csproj
+++ b/src/MailXmlProcessor.Api/MailXmlProcessor.Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../MailXmlProcessor.Domain/MailXmlProcessor.Domain.csproj" />
+    <ProjectReference Include="../MailXmlProcessor.Infrastructure/MailXmlProcessor.Infrastructure.csproj" />
     <ProjectReference Include="..\MailXmlProcessor.Application\MailXmlProcessor.Application.csproj" />
   </ItemGroup>
 
