--- a/src/MailXmlProcessor.Application/MailXmlProcessor.Application.csproj
+++ b/src/MailXmlProcessor.Application/MailXmlProcessor.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\MailXmlProcessor.Domain\MailXmlProcessor.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities/" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
