--- a/src/MailXmlProcessor.Infrastructure/MailXmlProcessor.Infrastructure.csproj
+++ b/src/MailXmlProcessor.Infrastructure/MailXmlProcessor.Infrastructure.csproj
@@ -4,6 +4,19 @@
     <ProjectReference Include="..\MailXmlProcessor.Application\MailXmlProcessor.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence/Entities/Persistence/Entities/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.22">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
