--- a/src/MailXmlProcessor.Api/appsettings.json
+++ b/src/MailXmlProcessor.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=MailXmlProcessorDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "ExtractionSettings": {
+    "XmlBlockTags": [ "expense", "vendor", "description", "date" ]
   }
 }
