Add sales tax and total excluding tax

--- a/src/MailXmlProcessor.Api/appsettings.json
+++ b/src/MailXmlProcessor.Api/appsettings.json
@@ -10,6 +10,7 @@
     "DefaultConnection": "Server=localhost;Database=MailXmlProcessorDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ExtractionSettings": {
-    "XmlBlockTags": [ "expense", "vendor", "description", "date" ]
+    "XmlBlockTags": [ "expense", "vendor", "description", "date" ],
+    "SalesTaxRate": 0.12
   }
 }
